--- a/css/default.css
+++ b/css/default.css
@@ -1,10 +1,12 @@
-@import url("normalize.css");
-@import url("banner.css");
-@import url("halls.css");
-@import url("about.css");
-@import url("feedback.css");
-@import url("faq.css");
-@import url("footer.css");
+@import url('normalize.css');
+@import url('header.css');
+@import url('hero.css');
+@import url('release.css');
+@import url('halls.css');
+@import url('booking.css');
+@import url('faq.css');
+@import url('feedback.css');
+@import url('footer.css');
 
 html {
   position: relative;
@@ -61,6 +63,11 @@ section {
 ul {
   list-style: none;
   margin: 0;
+  padding: 0;
+}
+
+button {
+  cursor: pointer;
 }
 
 .container {
@@ -69,11 +76,13 @@ ul {
   margin: 0 auto;
 }
 
-.title {  
+.title {
   font-weight: 700;
   font-size: 40px;
   line-height: 50px;
   text-align: center;
   text-transform: uppercase;
-  margin-bottom: 60px;
+  color: #FFF;
+  text-align: center;
 }
+
