--- a/css/booking.css
+++ b/css/booking.css
@@ -44,7 +44,28 @@
   margin-bottom: 10px;
 }
 
-.booking__date {
+.booking__date,
+.booking__time {
   width: 134px;
   height: 52px;
+}
+
+.booking__number {
+  width: 300px;
+  height: 52px;
+  font-size: 18px;
+  line-height: 28px;
+  color: #211E1E;
+  padding-left: 20px;
+}
+
+.booking__btn {
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 28px;
+  text-transform: uppercase;
+  background-color: #FFF;
+  border-radius: 10px;
+  color: #6C0287;
+  padding: 15px 60px;
 }
