--- a/css/default.css
+++ b/css/default.css
@@ -4,6 +4,7 @@
 @import url('release.css');
 @import url('halls.css');
 @import url('booking.css');
+@import url('about.css');
 @import url('faq.css');
 @import url('feedback.css');
 @import url('footer.css');
@@ -29,19 +30,19 @@ body {
   background-color: hsl(300, 2%, 10%);
   background-position-y: bottom;
   background-size: 629px 100%;
-  background: #000000;
+  background: hsl(0,0%,0%);
   background: -moz-linear-gradient(top, hsl(0,0%,0%) 0%, hsl(0,0%,0%) 90%, hsl(300,70%,13%) 100%);
   background: -webkit-gradient(left top, left bottom, color-stop(0%, hsl(0,0%,0%)), color-stop(90%, hsl(0,0%,0%)), color-stop(100%, hsl(300,70%,13%)));
   background: -webkit-linear-gradient(top, hsl(0,0%,0%) 0%, hsl(0,0%,0%) 90%, hsl(300,70%,13%) 100%);
   background: -o-linear-gradient(top, hsl(0,0%,0%) 0%, hsl(0,0%,0%) 90%, hsl(300,70%,13%) 100%);
   background: -ms-linear-gradient(top, hsl(0,0%,0%) 0%, hsl(0,0%,0%) 90%, hsl(300,70%,13%) 100%);
   background: linear-gradient(to bottom, hsl(0,0%,0%) 0%, hsl(0,0%,0%) 90%, hsl(300,70%,13%) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#380a38', GradientType=0 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='hsl(0,0%,0%)', endColorstr='#380a38', GradientType=0 );
   margin: 0;
   padding: 0;  
 }
 
-h1, h2, h2, p, blockquote {
+h1, h2, h3, p, figure, blockquote, label {
   margin: 0;
 }
 
@@ -84,5 +85,6 @@ button {
   text-transform: uppercase;
   color: #FFF;
   text-align: center;
+  margin-bottom: 40px;
 }
 
