--- a/css/faq.css
+++ b/css/faq.css
@@ -1,24 +1,24 @@
 .faq__list {
-  padding: 0;
-  margin: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .faq__item {
-  background-color: #fff;
-  color: #1C1A1A;
-  font-weight: 700;
-  font-size: 24px;
-  padding: 30px 70px;
-  margin-bottom: 20px;
-  list-style: none;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  list-style: none;
+  background-color: hsl(0, 0%, 100%);
+  color: hsl(0, 4%, 11%);
+  font-weight: 700;
+  font-size: 24px;
+  padding: 30px 70px;
+  margin-bottom: 20px;  
 }
 
 .faq__item:nth-child(2n) {
-  background-color: #440F51;
-  color: #fff;
+  background-color: hsl(288, 69%, 19%);
+  color: hsl(0, 0%, 100%);
 }
 
 .faq__item:after {
