--- a/css/feedback.css
+++ b/css/feedback.css
@@ -1,14 +1,20 @@
-.feedback__wrapper {
-  display: inline-block;
-  margin-bottom: 30px;
+.feedback__list {
+  display: flex;
+  flex-direction: column;
 }
 
-.last-wrapper {
+.feedback__item {
+  display: flex;
+  margin-bottom: 50px;
+}
+
+.feedback__item:last-child {
   margin-bottom: 0;
 }
 
 .feedback__image {
   float: none;
+  margin-right: 20px;
   margin-bottom: 7px;
 }
 
