--- a/css/header.css
+++ b/css/header.css
@@ -22,6 +22,18 @@
   font-weight: 700;
   color: #fff;
   padding: 12px 32px;
-  border: 3px solid #CD06FF;
+  border: 3px solid #6C0287;
   border-radius: 10px;
+}
+
+.header__btn:hover {
+  background-color: #6C0287;
+}
+
+.header__btn:focus {
+  background-color: #6C0287;
+}
+
+.header__btn:active {
+  background-color: #640AA3;
 }
