--- a/css/header.css
+++ b/css/header.css
@@ -24,6 +24,7 @@
   padding: 12px 32px;
   border: 3px solid #6C0287;
   border-radius: 10px;
+  transition: .3s ease-in-out;
 }
 
 .header__btn:hover {
