--- a/css/footer.css
+++ b/css/footer.css
@@ -43,12 +43,9 @@
   padding: 0;
   margin: 0;
 }
-/* 
-.contacts__item {  
-  transition: color .3s ease-in-out;
-} */
 
 .contacts__link {
+  display: block;
   transition: color .3s ease-in-out;  
 }
 
@@ -59,6 +56,7 @@
 .contacts__link:focus {
   color: #EADEED;
   border: 1px solid #CD06FF;
+  outline: none;
 }
 
 .contacts__link:active {
