--- a/css/hero.css
+++ b/css/hero.css
@@ -36,21 +36,22 @@
   top: 790px;
   background-color: transparent;
   border: none;
+  padding: 0;
   z-index: 2;
   transition: .3s ease-in-out; 
 }
 
-.hero__down_image:hover {
+.hero__down:hover {
   background-image: url("../img/down-hover.svg");
   
 }
 
-.hero__down_image:focus {
+.hero__down:focus {
   background-image: url("../img/down-focus.svg");
-  
+  border: 1px solid #CD06FF;
 }
 
-.hero__down_image:active {
+.hero__down:active {
   background-image: url("../img/down-active.svg");
   
 }
