--- a/css/hero.css
+++ b/css/hero.css
@@ -32,11 +32,13 @@
 .hero__down {  
   position: absolute;
   content: "";
-  left: 886px;
+  width: 97px;
+  height: 97px;
+  left: 895px;
   top: 790px;
   background-color: transparent;
+  background-image: url("../img/down.svg");
   border: none;
-  padding: 0;
   z-index: 2;
   transition: .3s ease-in-out; 
 }
@@ -48,6 +50,8 @@
 
 .hero__down:focus {
   background-image: url("../img/down-focus.svg");
+  width: 100px;
+  height: 100px;
   border: 1px solid #CD06FF;
 }
 
