--- a/css/release.css
+++ b/css/release.css
@@ -2,6 +2,15 @@
   display: flex;
   flex-wrap: wrap;
   gap: 40px 20px;
+  transition: all .10ms ease-in-out;
+}
+
+.card {
+  transition: all .10ms ease-in-out;
+}
+
+.release__card:hover {
+  transform: scale(1.1);  
 }
 
 .release__card_desc {
