--- a/css/halls.css
+++ b/css/halls.css
@@ -17,7 +17,7 @@
   font-size: 70px;
   line-height: 80px;
   text-transform: uppercase;  
-  color: #FFFFFF;
+  color: #fff;
   width: 580px;
   height: 349px;
   margin: 0 auto;
