--- a/css/release.css
+++ b/css/release.css
@@ -15,7 +15,7 @@
 .release__card_desc {
   font-weight: 700;
   line-height: 28px;
-  color: #FFFFFF;
+  color: #fff;
   width: 380px;
   height: 228px; 
   padding-top: 166px;
