--- a/css/default.css
+++ b/css/default.css
@@ -1,4 +1,5 @@
 @import url('normalize.css');
+@import url('var.css');
 @import url('header.css');
 @import url('hero.css');
 @import url('release.css');
@@ -83,7 +84,7 @@ button {
   line-height: 50px;
   text-align: center;
   text-transform: uppercase;
-  color: #FFF;
+  color: #fff;
   text-align: center;
   margin-bottom: 40px;
 }
