--- a/css/hero.css
+++ b/css/hero.css
@@ -101,7 +101,7 @@ font-variant: small-caps;
   text-transform: uppercase;
   color: hsl(0, 0%, 100%);
   padding: 25px 69px;
-  background-color: #6C0287;
+  background-color: var(--main-color);
   border: none;
   border-radius: 10px;
   box-shadow: 0px 0px 10px 5px hsla(288, 97%, 27%, 0.6);
@@ -113,9 +113,9 @@ font-variant: small-caps;
 }
 
 .hero__btn:focus {
-  background-color: #640AA3;
+  background-color: var(--secondary-color);
 }
 
 .hero__btn:active {
-  background-color: #640AA3;
+  background-color: var(--secondary-color);
 }
