--- a/css/var.css
+++ b/css/var.css
@@ -2,4 +2,7 @@
   --main-color: #6C0287;
   --secondary-color: #640AA3;
   --next-color: #EADEED;
+  --add-color: #CD06FF;
+  --bg-color: #440F51;
+  --bg-next-color: #840AA3;
 }
