--- a/css/release.css
+++ b/css/release.css
@@ -29,6 +29,7 @@
 
 .card-audio {
   background-image: url('../img/2.jpg');
+  transform: translateY(50px);
 }
 
 .card-karaoke {
@@ -41,6 +42,7 @@
 
 .card-films {
   background-image: url('../img/5.jpg');
+  transform: translateY(50px);
 }
 
 .card-playstation {
