--- a/css/feedback.css
+++ b/css/feedback.css
@@ -1,36 +1,21 @@
 .feedback__list {
   display: flex;
   flex-direction: column;
-  gap: 50px;
 }
 
 .feedback__item {
   display: flex;
+  margin-bottom: 50px;
 }
 
 .feedback__item:last-child {
   margin-bottom: 0;
 }
 
-.feedback__wrapper {
-  display: flex;
-  gap: 20px;
-}
-
 .feedback__image {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  position: relative;
-}
-
-.feedback__image:after {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 280px;
-  background: radial-gradient(50% 50% at 50% 50%, rgba(196, 196, 196, 0) 0%, rgba(108, 2, 135, 0.5) 100%);
-  border-radius: 140px;  
+  float: none;
+  margin-right: 20px;
+  margin-bottom: 7px;
 }
 
 .feedback__image_desc {
