--- a/css/about.css
+++ b/css/about.css
@@ -1,18 +1,17 @@
 .about__content {
   display: grid;
-  grid-template-columns: 600px auto;
+  grid-template-columns: 600px 1fr;
   grid-template-rows: 222px 325px;
   grid-auto-flow: column;
   column-gap: 71px;
   row-gap: 48px;
   grid-template-areas: "image desc"
                        "image text";
+  background-image: url("../img/about_image.jpg");
+  background-repeat: no-repeat;
+  grid-area: image;
 }
 
-.about__content_image { 
-  grid-area: image;  
-
-}
 .about__content_desc {
   grid-area: desc;    
 }
@@ -80,5 +79,61 @@
   vertical-align: middle;
   width: 280px;
   margin-left: 20px;
-  font-style: normal;
+}
+
+
+@media (max-width: 1280px) {
+
+  .about__content {
+    grid-template-columns: 420px 1fr;
+    column-gap: 40px;
+    row-gap: 26px;
+    background-image: url("../img/about_image-1024.jpg");
+    background-repeat: no-repeat;
+  }
+
+  .about__content_image {
+    display: block;
+  }
+
+  .about__content_desc-text {
+    font-size: 18px;
+    line-height: 24px;
+  }
+
+  .about__quote {
+    margin-right: 0;
+  }
+  
+  .about__quote:before {
+    width: 15px;
+    height: 36px;
+  }
+
+  .about__tagline:after {
+    width: 15px;
+    height: 36px;
+    background-position-y: 10px;
+  }  
+
+  .about__tagline {
+    font-size: 30px;
+    line-height: 36px;
+    margin-bottom: 13px;
+  }
+
+  .about__founder {
+    padding-left: 80px;
+  }
+
+  .about__founder_text {
+    font-size: 18px;
+    line-height: 26px;
+    margin-left: 35px;
+  }
+}
+
+
+@media (max-width: 1280px) {
+  
 }
