--- a/css/default.css
+++ b/css/default.css
@@ -73,7 +73,7 @@ button {
 }
 
 .container {
-  width: 1240px;
+  max-width: 1240px;
   padding: 0 30px;
   margin: 0 auto;
 }
@@ -87,5 +87,14 @@ button {
   color: #fff;
   text-align: center;
   margin-bottom: 40px;
+}
+
+
+@media (max-width: 1024px) {
+  .title {
+    font-size: 30px;
+    line-height: 40px;
+    margin-bottom: 26px;
+  }
 }
 
