--- a/css/about.css
+++ b/css/about.css
@@ -1,23 +1,20 @@
 .about__content {
   display: grid;
-  grid-template-columns: 600px 1fr;
-  grid-template-rows: 222px 325px;
-  grid-auto-flow: column;
-  column-gap: 71px;
-  row-gap: 48px;
-  grid-template-areas: "image desc"
-                       "image text";
-  background-image: url("../img/about_image.jpg");
-  background-repeat: no-repeat;
-  grid-area: image;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 200px 202px 84px;
+  gap: 39px 71px;
 }
 
-.about__content_desc {
-  grid-area: desc;    
+.image {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-.about__text {
-  grid-area: text; 
+.about__content_image {
+  grid-column: 1 / 2;
+  grid-row: 1 / 4;
 }
 
 .about__content_desc-text {
@@ -65,35 +62,27 @@
   transform: rotate(180deg);
 }
 
+.nowrap {
+  display: none;
+}
+
 .about__founder {
-  padding-left: 90px;
+  padding-left: 180px;
 }
 
 .about__founder_image {
-  display: inline-block;
-  vertical-align: middle;
+  margin-right: 30px;
 }
 
 .about__founder_text {
-  display: inline-block;
-  vertical-align: middle;
-  width: 280px;
-  margin-left: 20px;
+  line-height: 28px;
 }
 
 
 @media (max-width: 1280px) {
-
   .about__content {
-    grid-template-columns: 420px 1fr;
-    column-gap: 40px;
-    row-gap: 26px;
-    background-image: url("../img/about_image-1024.jpg");
-    background-repeat: no-repeat;
-  }
-
-  .about__content_image {
-    display: block;
+    grid-template-rows: 195px 146px 78px;
+    gap: 26px 40px;
   }
 
   .about__content_desc-text {
@@ -101,10 +90,6 @@
     line-height: 24px;
   }
 
-  .about__quote {
-    margin-right: 0;
-  }
-  
   .about__quote:before {
     width: 15px;
     height: 36px;
@@ -112,7 +97,7 @@
 
   .about__tagline:after {
     width: 15px;
-    height: 36px;
+    height:36px;
     background-position-y: 10px;
   }  
 
@@ -121,19 +106,13 @@
     line-height: 36px;
     margin-bottom: 13px;
   }
-
+  
   .about__founder {
     padding-left: 80px;
-  }
-
-  .about__founder_text {
-    font-size: 18px;
-    line-height: 26px;
-    margin-left: 35px;
   }
 }
 
 
-@media (max-width: 1280px) {
-  
+@media (max-width: 1024px) {
+
 }
