--- a/css/about.css
+++ b/css/about.css
@@ -43,7 +43,6 @@
 
 .about__tagline {
   display: inline-block;
-  width: 450px;
   font-size: 44px;
   line-height: 50px;
   text-transform: uppercase;
@@ -60,10 +59,6 @@
   height: 50px;
   background-size: contain;
   transform: rotate(180deg);
-}
-
-.nowrap {
-  display: none;
 }
 
 .about__founder {
@@ -113,6 +108,75 @@
 }
 
 
-@media (max-width: 1024px) {
+@media (max-width: 768px) {
+  .about__content {
+    grid-template-rows: 342px 126px 78px;
+    gap: 31px 28px;
+  }
 
+  .about__content_desc-text {
+    font-size: 16px;
+    line-height: 22px;
+  }
+
+  .about__text {
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+  }
+
+  .about__tagline {
+    font-size: 32px;
+    line-height: 36px;
+    margin-bottom: 16px;   
+  }
+    
+  .about__founder {
+    padding-left: 0;
+  }
+  
+  .about__founder_text {
+    font-size: 18px;
+    line-height: 26px;
+  }
+}
+
+
+@media (max-width: 480px) {
+  .about__content {
+    grid-template-columns: 1fr;
+    grid-template-rows: 127px 278px 79px 56px;
+    row-gap: 20px;
+  }
+  
+  .about__content_image {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+  }
+
+  .about__content_desc-text {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    font-size: 12px;
+    line-height: 16px;
+  }
+
+  .about__text {
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+  }
+
+  .about__tagline {
+    font-size: 18px;
+    line-height: 26px;
+    margin-bottom: 9px;   
+  }
+    
+  .about__founder {
+    padding-left: 0;
+  }
+  
+  .about__founder_text {
+    font-size: 12px;
+    line-height: 16px;
+  }
 }
