--- a/css/about.css
+++ b/css/about.css
@@ -14,7 +14,6 @@
 
 .about__content_image {
   grid-column: 1 / 2;
-  grid-row: 1 / 4;
 }
 
 .about__content_desc-text {
@@ -76,6 +75,7 @@
 
 @media (max-width: 1280px) {
   .about__content {
+    grid-template-columns: 380px 1fr;
     grid-template-rows: 195px 146px 78px;
     gap: 26px 40px;
   }
@@ -110,8 +110,12 @@
 
 @media (max-width: 768px) {
   .about__content {
-    grid-template-rows: 342px 126px 78px;
+    grid-template-rows: 380px 126px 78px;
     gap: 31px 28px;
+  }
+
+  .about__content:nth-child(2) {
+    align-items: center;
   }
 
   .about__content_desc-text {
@@ -129,9 +133,19 @@
     line-height: 36px;
     margin-bottom: 16px;   
   }
+
+  .about__quote:before {
+    height: 15px;
+  }
+
+  .about__tagline:after {
+    height: 21px;
+    background-position-y: 10px;
+  } 
     
   .about__founder {
-    padding-left: 0;
+    grid-column: 1 / 3;
+    padding-left: 350px;
   }
   
   .about__founder_text {
@@ -144,13 +158,13 @@
 @media (max-width: 480px) {
   .about__content {
     grid-template-columns: 1fr;
-    grid-template-rows: 127px 278px 79px 56px;
-    row-gap: 20px;
+    grid-template-rows: 127px 340px 100px 56px;
+    gap: 20px 0;
   }
   
   .about__content_image {
     grid-column: 1 / 2;
-    grid-row: 1 / 2;
+    grid-row: 2 / 3;
   }
 
   .about__content_desc-text {
@@ -162,7 +176,7 @@
 
   .about__text {
     grid-column: 1 / 3;
-    grid-row: 2 / 3;
+    grid-row: 3 / 4;
   }
 
   .about__tagline {
@@ -173,10 +187,18 @@
     
   .about__founder {
     padding-left: 0;
+    grid-column: 1 / 3;
+    grid-row: 4 / 5;    
+  }
+
+  .about__founder_image {
+    width: 56px;
+    height: 56px;
   }
   
   .about__founder_text {
     font-size: 12px;
     line-height: 16px;
+    max-width: 285px;
   }
 }
